--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ include(FindPythonLibs)
 include_directories(${PYTHON_INCLUDE_DIR})
 
 set(sources
+	libpokerom/disasm.c
 	libpokerom/maps.c
 	libpokerom/pokerom.c
 	libpokerom/special_entities.c
