--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ include_directories(${PYTHON_INCLUDE_DIR})
 
 set(sources
 	libpokerom/disasm.c
+	libpokerom/eputnbr.c
 	libpokerom/maps.c
 	libpokerom/pokedex.c
 	libpokerom/pokerom.c
