--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
-/www		export-ignore
-make-release.sh	export-ignore
-.gitignore	export-ignore
 .gitattributes	export-ignore
+.gitignore	export-ignore
+/www		export-ignore
+callgrind.sh	export-ignore
+make-release.sh	export-ignore
