--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ set(sources
 
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
 
-add_definitions(-W -Wall -O3)
+add_definitions(-Wall -Wextra -O3)
 
 add_library(pokerom SHARED ${sources})
 set_target_properties(pokerom PROPERTIES PREFIX "")
