--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,4 @@
 .gitattributes	export-ignore
 .gitignore	export-ignore
 /www		export-ignore
-callgrind.sh	export-ignore
-make-release.sh	export-ignore
+/utils		export-ignore
