--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -3,7 +3,7 @@ name: Web export
 on:
   push:
     branches:
-      - master
+      - main
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
